After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 656248 - patch for gconfd-dbus to avoid segmentation fault for gconfd-2
patch for gconfd-dbus to avoid segmentation fault for gconfd-2
Status: VERIFIED FIXED
Product: GConf
Classification: Deprecated
Component: gconf
3.1.x
Other Linux
: Normal major
: ---
Assigned To: GConf Maintainers
GConf Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-08-10 04:56 UTC by Joey Zheng
Modified: 2011-08-15 05:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gconfd-dbus-segfal.patch (579 bytes, patch)
2011-08-10 04:56 UTC, Joey Zheng
none Details | Review

Description Joey Zheng 2011-08-10 04:56:02 UTC
Created attachment 193513 [details] [review]
gconfd-dbus-segfal.patch

In functoin, server_message_func(), we need to check if dbus_message_get_interface (message) is NULL before we do strcmp.
Detailed in attached patch file, "gconfd-dbus-segfal.patch".
Comment 1 Rob Bradford 2011-08-14 15:50:27 UTC
I would like to know how you were triggering this?
Comment 2 Rob Bradford 2011-08-14 15:54:14 UTC
commit 150e7fbea18a1431891224a79e6710377b4aa9dc
Author: Rob Bradford <rob@linux.intel.com>
Date:   Sun Aug 14 16:49:10 2011 +0100

    gconfd-dbus: Handle messages that don't have an interface set
    
    Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=656248
    
    Inspired by proposed solution from Joey Zheng.
Comment 3 Joey Zheng 2011-08-15 04:14:11 UTC
Rob,

Thanks for accepting this patch.
I triggered this by using dbus-tool from http://code.google.com/p/dbus-tools, to list all of the members of org.gnome.GConf, by command "./dbus org.gnome.GConf".

I didn't check if it is caused by incorrect code in dbus-tool, but I think we can add this as a foolproof patch. :)

Thanks,
Joey Zheng
Comment 4 Joey Zheng 2011-08-15 04:16:21 UTC
Oops, I didn't noticed that the default status is "UNCONFIRMED", so change it back to RESOLVED.
Comment 5 Joey Zheng 2011-08-15 05:10:56 UTC
I just built it with the new patch and can confirm the segmentation issue is gone.