gconfd-dbus: Handle messages that don't have an interface set

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=656248

Inspired by proposed solution from Joey Zheng.